--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,9 +8,20 @@
 
     <div class="collaps navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to("登录", '#') %>
-        </li>
+        <% if !current_user %>
+          <li><%= link_to("Sign Up", new_user_registration_path) %> </li>
+          <li><%= link_to("Sign In", new_user_session_path) %> </li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Hi!, <%= current_user.email %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to("Sign Out", destroy_user_session_path, method: :delete) %> </li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </div>
     <!-- /.navbar-collaps -->
